# photo-agent

./: .gitignore  README.md  docker-compose.yml  gold_testset_plan.md  manifest.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_visual_meaning_memory.py  0003_travel_decision_search.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  models.py  mysql_repository.py  session.py
backend/app/schemas/: __init__.py  imports.py  oss.py  travel.py  visual.py
backend/app/services/: __init__.py  ad_filter.py  agent.py  cache.py  composer.py  evidence.py  exa_search.py  google_places.py  importer.py  open_source_stack.py  openai_compatible_llm.py  oss_runtime.py  place_catalog.py  place_resolver.py  ranking.py  routing.py  serpapi_travel.py  (+11 more)
backend/tests/: conftest.py  test_admin_and_travel_api.py  test_agent_factory.py  test_agent_flow.py  test_api.py  test_chainlit_renderer.py  test_config.py  test_deepinfra_live.py  test_deepinfra_vlm.py  test_exa_live.py  test_gemini_visual_landmarks.py  test_gemini_vlm.py  test_google_places.py  test_grounded_answer_pipeline.py  test_importer.py  test_open_source_stack_contracts.py  test_openai_compatible_llm.py  test_ranking.py  test_serper_travel.py  test_travel_api_sources.py  test_travel_decision_search.py  test_travel_orchestrator_workflow.py  test_travel_planner_llm.py  test_travel_query_understanding.py  test_travel_recommendation_supervisor.py  test_visual_official_history.py  test_visual_workflow.py
(+101 files in other folders)
