[project]
name = "photo-agent-backend"
version = "0.1.0"
description = "FastAPI + MySQL backend for lightweight visual exploration."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "chainlit>=2.8",
  "fastapi>=0.115",
  "googlemaps>=4.10",
  "haystack-ai>=2.29",
  "httpx>=0.27",
  "langfuse>=3.0",
  "langgraph>=1.0",
  "litellm>=1.75",
  "pydantic>=2",
  "pydantic-ai>=1.0",
  "pymysql>=1.1",
  "python-dotenv>=1.0",
  "redis>=5.0",
  "serpapi>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
